<resources>
    <string name="app_name">BonApp</string>
    <string name="facebook_app_id">1890233774572257</string>
    <string name="google_map_key">AIzaSyC4Bh_v8xegcW3UXTv8WduEaNufA0vx5_E</string>
    <string name="txt_something_went_wrong">Something went wrong , please try again!</string>
    <string name="left">LEFT</string>
    <string name="my_account">My account</string>
    <string name="for_merchants">For merchants</string>
    <string name="my_orders">My orders</string>
    <string name="my_details">My details</string>
    <string name="my_addesses">My addresses</string>
    <string name="payment_details">Payment details</string>
    <string name="about_bonapp">About BonApp</string>
    <string name="log_out">Log out</string>
    <string name="txt_logout_laert">Are you sure you want to log out?</string>
    <string name="txt_ok">OK</string>
    <string name="internet_offline">No internet  connection!</string>
    <string name="txt_cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allow_permisisions">Allow Permissions</string>
    <string name="pls_enable_permisions">Please enable the application permissions for using this feature</string>
    <string name="enable">Enable</string>
    <string name="phone_number">Mobile Number</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postal">Postal</string>
    <string name="change_e_mail_address">Change e-mail address</string>
    <string name="change_password">Change password</string>
    <string name="u_0040">\@</string>
    <string name="email_address">E-mail Address</string>
    <string name="email">E-mail</string>
    <string name="change_email_add">Change e-mail address </string>
    <string name="a_confirmation_mail_has">A confirmation mail will be send to your new address, please read it and activate your e-mail. You will now be logged out.</string>
    <string name="rate_us_on_the_play_store">Rate us on the Play Store</string>
    <string name="bonapp_facebook_page">BonApp Facebook page</string>
    <string name="bonapp_insta">BonApp Instagram page</string>
    <string name="copyright_bonapp">© 2017 BonApp</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="txt_unable_to_find_app">Unable to find the app on playstore.</string>
    <string name="about_bon">About BonApp</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="not_able_to_load_please_try_again">Posts not able to load, please try again.</string>
    <string name="deals_not_able_to_load">Deals not able to load, please try again.</string>
    <string name="favorites_not_added">Favorites not added</string>
    <string name="currency">AED</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="login_instead">Log in instead?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Log in</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="register_new_account">Register new account</string>
    <string name="empty_email">Please enter e-mail address.</string>
    <string name="valid_email_war">Please enter valid e-mail.</string>
    <string name="empty_pwd_war">Please enter a password.</string>
    <string name="pwd_length_war">Password must be atleast 6 digits long.</string>
    <string name="empty_phno_war">Please enter mobile number.</string>
    <string name="empty_name_war">Please enter name.</string>
    <string name="fb_failure_msg">Some failure occurred during fb signin, please log in again!</string>
    <string name="fb_signin_canceled">Fb signin canceled!</string>
    <string name="you_dont_have_acess">You don’t have access</string>
    <string name="you_need_to_be">You need to be a merchant to access this page. Do you run a restaurant and would like to use BonApp for your business? Contact us!</string>
    <string name="create_deal">Create Deal</string>
    <string name="merchant_mode">Merchant Mode</string>
    <string name="yesterday">Yesterday</string>
    <string name="done">Done</string>
    <string name="ends">Ends</string>
    <string name="begins">Begins</string>
    <string name="new_price">New price</string>
    <string name="original_price">Original price</string>
    <string name="total_items">Total items</string>
    <string name="title">Title</string>
    <string name="pls_enter_original">Please enter original price to select new price.</string>
    <string name="empty_title_war">Please enter a title for deal.</string>
    <string name="empty_description_war">Please enter some description about this deal.</string>
    <string name="empty_total_items">Please enter the number of total items.</string>
    <string name="zero_total_items">There should be minimum one item.</string>
    <string name="empty_original_price">Please enter the original price.</string>
    <string name="zero_original_price">Original price can not be less then one.</string>
    <string name="empty_new_price">Please enter the new price.</string>
    <string name="empty_begin_time">Please enter the begin time of this deal.</string>
    <string name="empty_end_time">Please enter the end time of this deal.</string>
    <string name="no_deals_created_yet">No deals created yet, please create your deals.</string>
    <string name="sold">SOLD</string>
    <string name="deactivate_deal">Deactivate deal</string>
    <string name="active_deal">Active deal</string>
    <string name="edit">Edit</string>
    <string name="end_time_cant_less">End time can not be less than begin time.</string>
    <string name="deal_deactivated">Deal deactivated successfully.</string>
    <string name="deal_activated">Deal activated successfully.</string>
    <string name="date">Date</string>
    <string name="deals_created">Deals created</string>
    <string name="total_items_for_sale">Total items for sale</string>
    <string name="items_sold">Items sold</string>
    <string name="percentage_sold">Percentage sold</string>
    <string name="sold_for">Sold for</string>
    <string name="sold_for_excl_vat">Sold for (excl. VAT)</string>
    <string name="your_income">Your income</string>
    <string name="your_income_excl_vat">Your income (excl. VAT)</string>
    <string name="order_history">Order history</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="crash_toast_text">Oh oh ! app crashed.</string>
    <string name="pickup_before">Pickup before</string>
    <string name="view_all">View All</string>
    <string name="loc_not_found">Location not found!</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="description">Description</string>
    <string name="page_one_head">Eat well.\nSave money.\nDo good.</string>
    <string name="page_one_sub_head">BonApp gives you great food at low prices. If you fancy eating at unusual times,
        say a late lunch or early dinner, then we can give you discounts up tp 60% off the normal price. Sounds good?</string>
    <string name="page_two_head">Eat well.\nSave money.\nDo good.</string>
    <string name="page_two_sub_head">BonApp gives you great food at low prices. If you fancy eating at unusual times,
        say a late lunch or early dinner, then we can give you discounts up tp 60% off the normal price. Sounds good?</string>
    <string name="page_three_head">Eat well.\nSave money.\nDo good.</string>
    <string name="page_three_sub_head">BonApp gives you great food at low prices. If you fancy eating at unusual times,
        say a late lunch or early dinner, then we can give you discounts up tp 60% off the normal price. Sounds good?</string>
    <string name="find_great_deals">Find great deals</string>
    <string name="deactivated_deal">Deactivated Deal</string>
    <string name="checkout">Check out</string>
    <string name="total">Total</string>
    <string name="payment">Payment</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="order_your_food">Order</string>
    <string name="okay">OK</string>
    <string name="access_denied">Access Denied!</string>
    <string name="merchant_email_change_message">You can not change your e-mail from here,please contact support team!</string>
    <string name="change_pwd">Change Password</string>
    <string name="items_discards_message">All items will be removed from your cart. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no_more_items_left">No more items are left.</string>
    <string name="contact_us">Contact us</string>
    <string name="version">Version</string>
    <string name="original_price_can_not_grater">Original price can not be less than New price</string>
    <string name="forget_pwdf">Forget Password</string>
    <string name="forgot_pwd_message">The reset link has been sent to your registered e-mail address!</string>
    <string name="forgot_pwd_alert_title">Verification Link Sent</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="empty_old_pwd_war">Please enter old password.</string>
    <string name="empty_new_pwd_war">Please enter new password.</string>
    <string name="empty_confirm_pwd_war">Please enter confirm password.</string>
    <string name="pwd_mismatch_war">New password and confirm password does not match.</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="success">Success</string>
    <string name="pwd_change_alert_message">Password changed successfully.</string>
    <string name="card_number">Card number</string>
    <string name="expiry">Expiry</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="xxx">XXX</string>
    <string name="activate">Activate deal</string>
    <string name="start_time_cant_be_less">Start time can\'t be less then current time.</string>
    <string name="hint_search_country">Search country</string>
    <string name="no_records_found">No records found!</string>
    <string name="hint_search_state">Search state</string>
    <string name="hint_search_city">Search city</string>
    <string name="empty_address_war">Please enter address.</string>
    <string name="empty_postal">Please enter postal code.</string>
    <string name="country_war">Please select country.</string>
    <string name="state_war">Please select state.</string>
    <string name="city_war">Please select city.</string>
    <string name="deliver_info">Billing information</string>
    <string name="next">Next</string>
    <string name="customer_order_blank_msg">When you have made your first order, this is where you’ll find it.</string>
    <string name="no_cards_message">When you have made your first payment this is where you’ll find your saved cards.</string>
    <string name="nothing_to_see">Nothing to see here yet!</string>
    <string name="amount_more_then_zero">Amount should be more than zero.</string>
    <string name="transaction_error_481">This transaction may be suspicious, your bank holds for further confirmation.
        Payment Provider has rejected this transaction due to suspicious activity; Your bank will reverse the dedicated amount to your
    card as per their policy.</string>
    <string name="error">Error</string>
    <string name="notes">Notes</string>
</resources>