<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBgWhite"
        tools:context="com.bonapp.app.bonapp.fragments.AboutBonAppFragment">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_24"
            android:src="@drawable/ic_appicon_greenbg" />


        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/colorAccountView"
            android:layout_marginTop="@dimen/dp_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/tv_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackishText"
                android:padding="@dimen/dp_15"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:text="@string/contact_us"
                android:drawableRight="@drawable/ic_rightarrow"
                android:textAppearance="@style/TextAppearance.FontMedium"
                android:background="?attr/selectableItemBackground"


                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:background="@color/colorAccountView"
                android:layout_marginLeft="@dimen/dp_15" />

            <TextView
                android:id="@+id/tv_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackishText"
                android:padding="@dimen/dp_15"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:text="@string/rate_us_on_the_play_store"
                android:textAppearance="@style/TextAppearance.FontMedium"
                android:drawableRight="@drawable/ic_rightarrow"
                android:background="?attr/selectableItemBackground"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:background="@color/colorAccountView"
                android:layout_marginLeft="@dimen/dp_15" />

            <TextView
                android:id="@+id/tv_bon_app_fb_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackishText"
                android:padding="@dimen/dp_15"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textAppearance="@style/TextAppearance.FontMedium"
                android:background="?attr/selectableItemBackground"
                android:text="@string/bonapp_facebook_page"
                android:drawableRight="@drawable/ic_rightarrow"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:background="@color/colorAccountView" />

            <TextView
                android:id="@+id/tv_bon_app_insta_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackishText"
                android:padding="@dimen/dp_15"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textAppearance="@style/TextAppearance.FontMedium"
                android:background="?attr/selectableItemBackground"
                android:text="@string/bonapp_insta"
                android:drawableRight="@drawable/ic_rightarrow"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:background="@color/colorAccountView" />


        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_60"
            android:text="@string/copyright_bonapp"
            android:textColor="@color/colorGrayText"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorGrayText"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:padding="@dimen/dp_5"
            android:textColorHighlight="@color/colorGrayText" />

    </LinearLayout>

</ScrollView>