<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9fafa">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/activity_news_address_etName"
                style="@style/RegisterEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_address_name"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/activity_news_address_etAddress"
                style="@style/RegisterEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_address_location"
                android:hint="@string/address"
                android:inputType="text" />

            <TextView
                android:id="@+id/activity_new_address_tvCity"
                style="@style/RegisterEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawableStart="@drawable/ic_location_city"
                android:focusable="false" />

            <TextView
                android:id="@+id/activity_new_address_tvArea"
                style="@style/RegisterEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawableStart="@drawable/ic_address_area"
                android:focusable="false" />

            <EditText
                android:id="@+id/activity_news_address_etPhone"
                style="@style/RegisterEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_phone_vector"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/activity_news_address_etNotes"
                style="@style/RegisterEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_note"
                android:hint="@string/notes"
                android:inputType="text" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>